fix [#36732] Auto depth feature misbehaves on orbit with mouse cursor outside the model.

ortho mode didn't store the depth for re-use when the cursor had no depth.